--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <h1>Test</h1>
+
     <script src="js/script.js" defer></script>    
 </body>
 </html>
