--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Test</h1>
-    
+    <h1>This is Heading</h1>
+    <h2>This is Heading</h2>
+    <h3>This is Heading</h3>
+    <h4>This is Heading</h4>
+    <h5>This is Heading</h5>
+    <h6>This is Heading</h6>
     <script src="js/script.js" defer></script>    
 </body>
 </html>
